# docs/swagger.json
@@ -79,7 +79,7 @@
                 "tags": [
                     "Table"
                 ],
-                "summary": "创建表单",
+                "summary": "创建表单草稿",
                 "parameters": [
                     {
                         "type": "string",
@@ -449,6 +449,12 @@
                         "ApiKeyAuth": []
                     }
                 ],
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "User"
                 ],
@@ -478,6 +484,12 @@
                     {
                         "ApiKeyAuth": []
                     }
+                ],
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "tags": [
                     "User"
@@ -576,6 +588,12 @@
                     {
                         "ApiKeyAuth": []
                     }
+                ],
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "tags": [
                     "User"
@@ -754,7 +772,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserReq"
+                            "$ref": "#/definitions/workflow.WorkflowReq"
                         }
                     }
                 ],
@@ -799,7 +817,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserReq"
+                            "$ref": "#/definitions/workflow.WorkflowReq"
                         }
                     }
                 ],
@@ -1270,6 +1288,7 @@
         "user.UserReq": {
             "type": "object",
             "required": [
+                "mail",
                 "password"
             ],
             "properties": {
@@ -1346,6 +1365,46 @@
                 "msg": {
                     "type": "string",
                     "example": "操作成功"
+                }
+            }
+        },
+        "workflow.WorkflowReq": {
+            "type": "object",
+            "required": [
+                "applicationId",
+                "name",
+                "structure",
+                "tables"
+            ],
+            "properties": {
+                "applicationId": {
+                    "type": "integer",
+                    "example": 12
+                },
+                "isStart": {
+                    "type": "integer",
+                    "default": 0,
+                    "enum": [
+                        0,
+                        1
+                    ],
+                    "example": 0
+                },
+                "name": {
+                    "type": "string",
+                    "example": "请假流程"
+                },
+                "remarks": {
+                    "type": "string",
+                    "example": "请假流程1"
+                },
+                "structure": {
+                    "type": "string",
+                    "example": "流程的JSON文件"
+                },
+                "tables": {
+                    "type": "string",
+                    "example": "[\"1001\", \"1002\"]"
                 }
             }
         }
